Change pin ports

--- a/Base200Tester.ioc
+++ b/Base200Tester.ioc
@@ -5,7 +5,6 @@ PA6.Mode=Full_Duplex_Master
 RCC.USART1Freq_Value=48000000
 RCC.SAI1Freq_Value=96000000
 RCC.CortexFreq_Value=48000000
-PG9.GPIOParameters=GPIO_Label
 Dma.SDMMC1_RX.0.MemInc=DMA_MINC_ENABLE
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F746ZGTx
@@ -15,10 +14,6 @@ VP_FATFS_VS_SDIO.Mode=SDIO
 PG2.Signal=GPIO_Input
 ADC3.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_9
 TIM1.IPParameters=Prescaler
-PG4.Signal=GPIO_Input
-PG8.Signal=GPIO_Input
-PG8.Locked=true
-PG4.Locked=true
 RCC.PLLCLKFreq_Value=48000000
 PG2.Locked=true
 PC12.Signal=SDMMC1_CK
@@ -28,15 +23,18 @@ PG3.GPIOParameters=GPIO_PuPd,GPIO_Label
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-LL-false,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true,8-MX_SPI5_Init-SPI5-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_I2C1_Init-I2C1-false-HAL-true,12-MX_ADC3_Init-ADC3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 PC0.GPIOParameters=GPIO_Label
 PD8.Locked=true
-PC0.GPIO_Label=VBAT
+PC0.GPIO_Label=GREEN
+PC3.Locked=true
 PA3.GPIOParameters=GPIO_Label
+PD6.Locked=true
 RCC.PLLI2SRCLKFreq_Value=96000000
 RCC.USART2Freq_Value=48000000
+PD4.Locked=true
 PD2.GPIOParameters=GPIO_PuPd
 Dma.SDMMC1_RX.0.Instance=DMA2_Stream3
 Dma.SDMMC1_RX.0.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.SDMMC1_RX.0.Priority=DMA_PRIORITY_LOW
-PG5.GPIO_Label=RIGHT
+PD6.GPIO_Label=RIGHT
 PD9.Mode=Asynchronous
 PG2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PinOutPanel.RotationAngle=0
@@ -47,44 +45,38 @@ USART3.VirtualMode-Asynchronous=VM_ASYNC
 Dma.SDMMC1_TX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
 RCC.I2C3Freq_Value=48000000
 RCC.LPTIM1Freq_Value=48000000
-Mcu.IP4=FATFS
-Mcu.IP5=I2C1
+Mcu.IP4=I2C1
+Mcu.IP5=NVIC
 RCC.FCLKCortexFreq_Value=48000000
-Mcu.IP2=CORTEX_M7
+Mcu.IP2=DMA
 I2C1.IPParameters=Timing
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SDMMC1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-Mcu.IP3=DMA
-Mcu.IP0=ADC1
-Mcu.IP1=ADC3
+Mcu.IP3=FATFS
+Mcu.IP0=ADC3
+Mcu.IP1=CORTEX_M7
 TIM1.Prescaler=48-1
 Mcu.UserConstants=
 PF7.Signal=SPI5_SCK
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 RCC.SDMMCFreq_Value=48000000
 PF5.Locked=true
-SH.ADCx_IN3.2=ADC3_IN3
 Mcu.ThirdPartyNb=0
 SPI1.Direction=SPI_DIRECTION_2LINES
 RCC.HCLKFreq_Value=48000000
 RCC.I2C4Freq_Value=48000000
-SH.ADCx_IN3.0=ADC1_IN3,IN3
-SH.ADCx_IN3.1=ADC2_IN3
-Mcu.IPNb=14
+Mcu.IPNb=13
 RCC.PLLI2SRoutputFreq_Value=96000000
 ProjectManager.PreviousToolchain=
+PD4.Signal=GPIO_Input
 RCC.APB2TimFreq_Value=48000000
 RCC.SPDIFRXFreq_Value=96000000
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_3
-PG8.GPIOParameters=GPIO_PuPd,GPIO_Label
-SH.ADCx_IN3.ConfNb=3
 SPI1.CalculateBaudRate=24.0 MBits/s
-PC3.Signal=ADCx_IN13
+PC3.Signal=GPIO_Input
 Mcu.Pin6=PA3
-PG5.GPIO_PuPd=GPIO_PULLUP
 RCC.SAI2Freq_Value=96000000
-PD8.Signal=USART3_TX
 Mcu.Pin7=PA5
+PD8.Signal=USART3_TX
 Mcu.Pin8=PA6
 PE10.Locked=true
 Mcu.Pin9=PA7
@@ -105,26 +97,21 @@ RCC.HSE_VALUE=25000000
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PB3.Mode=Trace_Asynchronous_SW
-Mcu.IP10=SPI5
+Mcu.IP10=SYS
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-Mcu.IP12=TIM1
+Mcu.IP12=USART3
 PE13.PinState=GPIO_PIN_SET
-Mcu.IP11=SYS
+Mcu.IP11=TIM1
 ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.16.0
 MxDb.Version=DB.6.0.10
 PE15.Locked=true
-ADC1.Rank-2\#ChannelRegularConversion=1
-Mcu.IP13=USART3
 PE13.Signal=GPIO_Output
 ProjectManager.BackupPrevious=false
 RCC.VCOInputFreq_Value=1000000
 PA14.Mode=Trace_Asynchronous_SW
 PF11.Signal=SPI5_MOSI
 File.Version=6
-PG4.GPIO_Label=LEFT
 ADC3.IPParameters=Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,NbrOfConversionFlag
-SH.ADCx_IN13.ConfNb=1
-PG7.GPIO_PuPd=GPIO_PULLUP
 PF8.Mode=Full_Duplex_Master
 PB8.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -134,6 +121,7 @@ Dma.RequestsNb=2
 ProjectManager.HalAssertFull=false
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 ProjectManager.ProjectName=Base200Tester
+PD7.GPIO_Label=LEFT
 RCC.MCO2PinFreq_Value=48000000
 PC8.GPIOParameters=GPIO_PuPd
 Mcu.Package=LQFP144
@@ -141,8 +129,9 @@ PB9.Signal=I2C1_SDA
 RCC.SDMMCClockSelection=RCC_SDMMC1CLKSOURCE_CLK48
 SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 PA6.Signal=SPI1_MISO
-PG5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE10.GPIOParameters=GPIO_Label
+PD5.GPIO_Label=PLUS
+PD5.GPIOParameters=GPIO_Label
 Dma.SDMMC1_RX.0.PeriphBurst=DMA_PBURST_INC4
 ProjectManager.ToolChainLocation=
 RCC.LSI_VALUE=32000
@@ -162,8 +151,10 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Dma.SDMMC1_TX.1.MemInc=DMA_MINC_ENABLE
 PC12.GPIO_PuPd=GPIO_NOPULL
 Dma.SDMMC1_RX.0.Mode=DMA_PFCTRL
+PD6.Signal=GPIO_Input
 PE10.GPIO_Label=EN_VBAT
 Dma.Request0=SDMMC1_RX
+PD5.Locked=true
 PF3.GPIO_Label=AN_1V8
 Dma.SDMMC1_RX.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 PF15.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
@@ -173,53 +164,41 @@ ProjectManager.CustomerFirmwarePackage=
 RCC.PLLSAIQCLKFreq_Value=96000000
 PG2.GPIO_Label=UP
 Dma.SDMMC1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-PA3.Signal=ADCx_IN3
+PA3.Signal=GPIO_Output
 PA5.Mode=Full_Duplex_Master
 Dma.SDMMC1_TX.1.Instance=DMA2_Stream6
+PD6.GPIOParameters=GPIO_Label
 RCC.I2SFreq_Value=96000000
 Dma.SDMMC1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 RCC.PLLQoutputFreq_Value=48000000
 ProjectManager.ProjectFileName=Base200Tester.ioc
-SH.ADCx_IN13.0=ADC1_IN13,IN13
-PG7.Locked=true
 Dma.SDMMC1_RX.0.PeriphInc=DMA_PINC_DISABLE
-PG7.Signal=GPIO_Input
 PA7.Mode=Full_Duplex_Master
 RCC.UART7Freq_Value=48000000
 PF3.Mode=IN9
 PE14.GPIOParameters=GPIO_Label
-Mcu.PinsNb=41
+Mcu.PinsNb=38
 PD2.GPIO_PuPd=GPIO_PULLUP
 ProjectManager.NoMain=false
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 PG3.Signal=GPIO_Input
-ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag
-PG1.Signal=GPIO_Input
-PG5.Locked=true
-PG9.Locked=true
-PG5.Signal=GPIO_Input
-PG9.Signal=GPIO_Output
 PG3.Locked=true
-PG1.Locked=true
 PC8.Signal=SDMMC1_D0
+PD7.Signal=GPIO_Input
 ProjectManager.DefaultFWLocation=true
 PE14.GPIO_Label=EN_VSWITCHED
 PD9.Signal=USART3_RX
+PD5.Signal=GPIO_Input
 Dma.SDMMC1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 ProjectManager.DeletePrevious=true
 RCC.UART8Freq_Value=48000000
-PC0.Signal=ADCx_IN10
+PC0.Signal=GPIO_Output
 RCC.LCDTFToutputFreq_Value=48000000
 SPI5.Mode=SPI_MODE_MASTER
 PF5.Mode=IN15
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 RCC.FamilyName=M
-PG10.Signal=GPIO_Output
 PE15.GPIOParameters=GPIO_Label
-PG8.GPIO_PuPd=GPIO_PULLUP
-PG10.Locked=true
 PC3.GPIOParameters=GPIO_Label
-PG8.GPIO_Label=TEST
 PC12.GPIOParameters=GPIO_PuPd
 FATFS.IPParameters=USE_DMA_CODE_SD
 PA13.Signal=SYS_JTMS-SWDIO
@@ -235,21 +214,19 @@ PB9.Mode=I2C
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 I2C1.Timing=0x20303E5D
 PB9.Locked=true
-PG10.GPIOParameters=GPIO_Label
 ProjectManager.RegisterCallBack=
 RCC.USBFreq_Value=48000000
 PF5.GPIOParameters=GPIO_Label
 NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 RCC.PLLSAIoutputFreq_Value=96000000
+PD7.Locked=true
 RCC.LSE_VALUE=32768
 PD8.Mode=Asynchronous
 PF3.GPIOParameters=GPIO_Label
 RCC.VCOI2SOutputFreq_Value=192000000
 PD2.Mode=SD_1_bit
-PG9.GPIO_Label=RED
 PA5.Signal=SPI1_SCK
-Mcu.Pin40=VP_TIM1_VS_ClockSourceINT
 PE13.GPIOParameters=PinState,GPIO_Label
 PC12.Mode=SD_1_bit
 RCC.PLLSAIPCLKFreq_Value=96000000
@@ -262,27 +239,24 @@ PE14.Signal=GPIO_Output
 RCC.UART4Freq_Value=48000000
 PE15.Signal=GPIO_Output
 MxCube.Version=6.1.0
-Mcu.Pin37=PB9
-PG4.GPIOParameters=GPIO_PuPd,GPIO_Label
-Mcu.Pin38=VP_FATFS_VS_SDIO
-Mcu.Pin35=PB3
+Mcu.Pin37=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin35=VP_FATFS_VS_SDIO
 RCC.I2C1Freq_Value=48000000
-Mcu.Pin36=PB8
+Mcu.Pin36=VP_SYS_VS_Systick
 RCC.PLLI2SPCLKFreq_Value=96000000
 SPI1.Mode=SPI_MODE_MASTER
-PG7.GPIO_Label=PLUS
-Mcu.Pin39=VP_SYS_VS_Systick
+PD4.GPIO_Label=TEST
 RCC.RNGFreq_Value=48000000
-SH.ADCx_IN10.ConfNb=1
-Mcu.Pin30=PA15
+Mcu.Pin30=PD6
+PD4.GPIOParameters=GPIO_Label
 VP_SYS_VS_Systick.Mode=SysTick
 Dma.SDMMC1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 RCC.EthernetFreq_Value=48000000
-Mcu.Pin33=PG9
-Mcu.Pin34=PG10
+Mcu.Pin33=PB8
+Mcu.Pin34=PB9
 PF15.GPIO_Label=SDA
-Mcu.Pin31=PC12
-Mcu.Pin32=PD2
+Mcu.Pin31=PD7
+Mcu.Pin32=PB3
 Dma.SDMMC1_RX.0.MemBurst=DMA_MBURST_INC4
 PF15.Signal=GPIO_Output
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -297,31 +271,30 @@ RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,A
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F746ZGTx
 RCC.PLLI2SQCLKFreq_Value=96000000
-Mcu.Pin26=PG8
+Mcu.Pin26=PC12
 PE12.Signal=GPIO_Output
-Mcu.Pin27=PC8
-Mcu.Pin24=PG5
+Mcu.Pin27=PD2
+Mcu.Pin24=PA14
 ProjectManager.UnderRoot=true
 PE13.Locked=true
-Mcu.Pin25=PG7
-Mcu.IP8=SDMMC1
-Mcu.IP9=SPI1
-Mcu.Pin28=PA13
-Mcu.IP6=NVIC
+Mcu.Pin25=PA15
+Mcu.IP8=SPI1
+Mcu.IP9=SPI5
+Mcu.Pin28=PD4
+Mcu.IP6=RCC
 PC8.Mode=SD_1_bit
-Mcu.Pin29=PA14
-Mcu.IP7=RCC
+Mcu.Pin29=PD5
+Mcu.IP7=SDMMC1
 ProjectManager.CoupleFile=true
 PC8.GPIO_PuPd=GPIO_PULLUP
 PB3.Signal=SYS_JTDO-SWO
 RCC.SYSCLKFreq_VALUE=48000000
-Mcu.Pin22=PG3
-Mcu.Pin23=PG4
-Mcu.Pin20=PD9
-ADC1.master=1
+Mcu.Pin22=PC8
+Mcu.Pin23=PA13
+Mcu.Pin20=PG2
 PA3.Locked=true
 PE13.GPIO_Label=LCD_RST
-Mcu.Pin21=PG2
+Mcu.Pin21=PG3
 Dma.SDMMC1_TX.1.MemBurst=DMA_MBURST_INC4
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
@@ -330,32 +303,29 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.CompilerOptimize=6
 Dma.SDMMC1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 PA14.Signal=SYS_JTCK-SWCLK
-SH.ADCx_IN10.0=ADC1_IN10,IN10
 ProjectManager.HeapSize=0x4000
-Mcu.Pin15=PE12
+Mcu.Pin15=PE13
 Dma.SDMMC1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PE13
-Mcu.Pin13=PG1
-Mcu.Pin14=PE10
-Mcu.Pin19=PD8
-PG4.GPIO_PuPd=GPIO_PULLUP
+Mcu.Pin16=PE14
+Mcu.Pin13=PE10
+Mcu.Pin14=PE12
+Mcu.Pin19=PD9
 Dma.SDMMC1_TX.1.MemDataAlignment=DMA_MDATAALIGN_WORD
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PE14
+Mcu.Pin17=PE15
 RCC.HSI_VALUE=16000000
-Mcu.Pin18=PE15
+Mcu.Pin18=PD8
 RCC.PLLP=RCC_PLLP_DIV4
 RCC.PLLQ=4
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-ADC1.NbrOfConversionFlag=1
 Mcu.Pin11=PF14
 Mcu.Pin12=PF15
 PB8.Mode=I2C
 Mcu.Pin10=PF11
 ADC3.Rank-11\#ChannelRegularConversion=1
 PB8.Signal=I2C1_SCL
-PC3.GPIO_Label=VSOLAR
+PC3.GPIO_Label=MINUS
 PE12.GPIOParameters=GPIO_Label
 PG3.GPIO_Label=DOWN
 PD2.Signal=SDMMC1_CMD
@@ -366,11 +336,11 @@ ADC3.NbrOfConversionFlag=1
 SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 Dma.SDMMC1_TX.1.Mode=DMA_PFCTRL
 Dma.SDMMC1_TX.1.PeriphInc=DMA_PINC_DISABLE
+PC0.Locked=true
 ProjectManager.DeviceId=STM32F746ZGTx
-PG7.GPIOParameters=GPIO_PuPd,GPIO_Label
-PG10.GPIO_Label=GREEN
+PD7.GPIOParameters=GPIO_Label
 ProjectManager.LibraryCopy=1
 SPI5.Direction=SPI_DIRECTION_2LINES
-PA3.GPIO_Label=VIN
+PA3.GPIO_Label=RED
 PA7.Signal=SPI1_MOSI
 isbadioc=false
