Fixed the buttons

--- a/Base200Tester.ioc
+++ b/Base200Tester.ioc
@@ -24,6 +24,7 @@ PD6.GPIO_Label=RIGHT
 PG2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PinOutPanel.RotationAngle=0
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 RCC.LPTIM1Freq_Value=48000000
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SDMMC1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -71,10 +72,12 @@ PE10.GPIOParameters=GPIO_Label
 PD5.GPIOParameters=GPIO_PuPd,GPIO_Label
 Dma.SDMMC1_RX.0.PeriphBurst=DMA_PBURST_INC4
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+USART3.IPParameters=VirtualMode-Asynchronous
 PE12.GPIO_Label=EN_SOLAR
 PA5.GPIOParameters=GPIO_Label
 SPI5.CalculateBaudRate=6.0 MBits/s
 RCC.CECFreq_Value=32786.88524590164
+PF14.Signal=GPIO_Output
 RCC.APB1TimFreq_Value=48000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Dma.SDMMC1_TX.1.MemInc=DMA_MINC_ENABLE
@@ -96,18 +99,20 @@ ProjectManager.ProjectFileName=Base200Tester.ioc
 ADC1.Rank-0\#ChannelRegularConversion=1
 Dma.SDMMC1_RX.0.PeriphInc=DMA_PINC_DISABLE
 PA15.GPIOParameters=GPIO_Label
-Mcu.PinsNb=46
+Mcu.PinsNb=47
 PD2.GPIO_PuPd=GPIO_PULLUP
 SH.ADCx_IN6.0=ADC1_IN6,IN6
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
 PG3.Locked=true
 PC6.Signal=USART6_TX
 PD7.Signal=GPIO_Input
+PF14.GPIO_Label=SCL
+PF14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 Dma.SDMMC1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 RCC.UART8Freq_Value=48000000
 PC0.Signal=GPIO_Output
 PC3.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB8.GPIO_Label=SCL
+PB8.GPIO_Label=SCL_DUT
 PA15.Locked=true
 RCC.USART6Freq_Value=48000000
 SH.ADCx_IN7.0=ADC1_IN7,IN7
@@ -119,63 +124,65 @@ PB5.Locked=true
 PB9.Locked=true
 NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PD7.Locked=true
+PD8.Mode=Asynchronous
+Mcu.Pin46=VP_TIM1_VS_ClockSourceINT
 PF3.GPIOParameters=GPIO_Label
 PA5.Signal=SharedAnalog_PA5
-Mcu.Pin40=PB5
-Mcu.Pin41=PB8
+Mcu.Pin40=PB4
+Mcu.Pin41=PB5
 PE13.GPIOParameters=PinState,GPIO_Label
 PC12.Mode=SD_1_bit
-Mcu.Pin44=VP_SYS_VS_Systick
-Mcu.Pin45=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin42=PB9
-Mcu.Pin43=VP_FATFS_VS_SDIO
+Mcu.Pin44=VP_FATFS_VS_SDIO
+Mcu.Pin45=VP_SYS_VS_Systick
+Mcu.Pin42=PB8
+Mcu.Pin43=PB9
 ProjectManager.LastFirmware=true
 PE14.Signal=GPIO_Output
 PE15.Signal=GPIO_Output
-Mcu.Pin37=PD7
+Mcu.Pin37=PD6
 PB4.GPIO_Label=EN_VBAT
-Mcu.Pin38=PB3
+Mcu.Pin38=PD7
 PB15.GPIO_Label=EN_BOOTS
-Mcu.Pin35=PD5
+Mcu.Pin35=PD4
 RCC.I2C1Freq_Value=48000000
-Mcu.Pin36=PD6
+Mcu.Pin36=PD5
 RCC.PLLI2SPCLKFreq_Value=96000000
-Mcu.Pin39=PB4
+Mcu.Pin39=PB3
 RCC.RNGFreq_Value=48000000
-Mcu.Pin30=PC8
+Mcu.Pin30=PC7
 Dma.SDMMC1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 RCC.EthernetFreq_Value=48000000
 PF12.Locked=true
-Mcu.Pin33=PD2
-Mcu.Pin34=PD4
-Mcu.Pin31=PA15
-Mcu.Pin32=PC12
+Mcu.Pin33=PC12
+Mcu.Pin34=PD2
+Mcu.Pin31=PC8
+Mcu.Pin32=PA15
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Dma.SDMMC1_TX.1.FIFOMode=DMA_FIFOMODE_ENABLE
 PF15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 ProjectManager.FreePins=false
 RCC.PLLI2SQCLKFreq_Value=96000000
-Mcu.Pin26=PG2
-Mcu.Pin27=PG3
-Mcu.Pin24=PD9
+Mcu.Pin26=PD15
+Mcu.Pin27=PG2
+Mcu.Pin24=PD8
 ProjectManager.UnderRoot=true
 PE13.Locked=true
-Mcu.Pin25=PD15
+Mcu.Pin25=PD9
 PC7.GPIO_Label=RX
-Mcu.Pin28=PC6
+Mcu.Pin28=PG3
 PC8.Mode=SD_1_bit
-Mcu.Pin29=PC7
+Mcu.Pin29=PC6
 PB4.Locked=true
 PC8.GPIO_PuPd=GPIO_PULLUP
 PA4.Signal=SharedAnalog_PA4
-Mcu.Pin22=PB15
+Mcu.Pin22=PB13
 PB5.Signal=GPIO_Output
-Mcu.Pin23=PD8
-Mcu.Pin20=PB12
+Mcu.Pin23=PB15
+Mcu.Pin20=PE15
 ADC1.master=1
 PA3.Locked=true
 PE13.GPIO_Label=LCD_RST
-Mcu.Pin21=PB13
+Mcu.Pin21=PB12
 PA5.GPIO_Label=AN_Vbat
 NVIC.ForceEnableDMAVector=true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -183,16 +190,16 @@ ProjectManager.CompilerOptimize=6
 Dma.SDMMC1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 PD15.Locked=true
 ProjectManager.HeapSize=0x4000
-Mcu.Pin15=PE10
+Mcu.Pin15=PG1
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PE12
-Mcu.Pin13=PF15
-Mcu.Pin14=PG1
-Mcu.Pin19=PE15
+Mcu.Pin16=PE10
+Mcu.Pin13=PF14
+Mcu.Pin14=PF15
+Mcu.Pin19=PE14
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PE13
+Mcu.Pin17=PE12
 PF9.Signal=SPI5_MOSI
-Mcu.Pin18=PE14
+Mcu.Pin18=PE13
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 Mcu.Pin11=PA7
 Mcu.Pin12=PF12
@@ -214,13 +221,13 @@ RCC.SAI1Freq_Value=96000000
 RCC.CortexFreq_Value=48000000
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F746ZGTx
-ADC3.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_9
 PG2.Signal=GPIO_Input
+ADC3.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_9
 SH.SharedAnalog_PA4.0=GPIO_Analog
 SH.SharedAnalog_PA4.1=ADC1_IN4,IN4
 PG2.Locked=true
 ADC3.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-LL-false,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_SPI5_Init-SPI5-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-LL-false,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_SPI5_Init-SPI5-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_USART6_UART_Init-USART6-false-HAL-true,12-MX_USART3_UART_Init-USART3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=GREEN
 PD6.Locked=true
@@ -232,6 +239,7 @@ Dma.SDMMC1_RX.0.Priority=DMA_PRIORITY_LOW
 PB13.GPIO_Label=PULL_RST
 PB15.Signal=GPIO_Output
 PF12.GPIOParameters=GPIO_Label
+PD9.Mode=Asynchronous
 ProjectManager.StackSize=0x800
 PG3.GPIO_PuPd=GPIO_PULLUP
 PB5.GPIOParameters=GPIO_Label
@@ -254,7 +262,7 @@ RCC.SDMMCFreq_Value=48000000
 PF5.Locked=true
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=48000000
-Mcu.IPNb=13
+Mcu.IPNb=14
 RCC.PLLI2SRoutputFreq_Value=96000000
 ProjectManager.PreviousToolchain=
 RCC.SPDIFRXFreq_Value=96000000
@@ -279,10 +287,11 @@ RCC.HSE_VALUE=25000000
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.IP10=SYS
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-Mcu.IP12=USART6
+Mcu.IP12=USART3
 PE13.PinState=GPIO_PIN_SET
 Mcu.IP11=TIM1
 PF9.Mode=Full_Duplex_Master
+Mcu.IP13=USART6
 PE13.Signal=GPIO_Output
 RCC.VCOInputFreq_Value=1000000
 File.Version=6
@@ -325,7 +334,7 @@ PD15.GPIO_Label=EN_3V3
 RCC.UART7Freq_Value=48000000
 PF3.Mode=IN9
 PE14.GPIOParameters=GPIO_Label
-PB9.GPIO_Label=SDA
+PB9.GPIO_Label=SDA_DUT
 ProjectManager.NoMain=false
 PG3.Signal=GPIO_Input
 USART6.IPParameters=VirtualMode-Asynchronous
@@ -365,6 +374,7 @@ RCC.PLLSAIPCLKFreq_Value=96000000
 board=custom
 RCC.VCOOutputFreq_Value=192000000
 PG1.GPIO_Label=CS_DUT
+PF14.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
 FATFS.USE_DMA_CODE_SD=1
 RCC.APB2Freq_Value=48000000
 RCC.UART4Freq_Value=48000000
@@ -376,6 +386,7 @@ PF15.GPIO_Label=SDA
 Dma.SDMMC1_RX.0.MemBurst=DMA_MBURST_INC4
 PD5.GPIO_PuPd=GPIO_PULLUP
 PF15.Signal=GPIO_Output
+PF14.Locked=true
 Dma.SDMMC1_TX.1.Priority=DMA_PRIORITY_LOW
 PA4.GPIOParameters=GPIO_Label
 RCC.UART5Freq_Value=48000000
