Fix the adc channels and GPIO ports

--- a/Base200Tester.ioc
+++ b/Base200Tester.ioc
@@ -11,11 +11,10 @@ PC12.Signal=SDMMC1_CK
 RCC.PLLQCLKFreq_Value=48000000
 PG3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC7.Locked=true
-PA3.GPIO_PuPd=GPIO_PULLUP
 PD8.Locked=true
 PC6.GPIO_Label=TX
 PC3.Locked=true
-PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA3.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=AN_1V8
 PD4.Locked=true
 PD2.GPIOParameters=GPIO_PuPd
@@ -39,9 +38,7 @@ PC3.Signal=GPIO_Input
 RCC.SAI2Freq_Value=96000000
 PD8.Signal=USART3_TX
 USART6.VirtualMode-Asynchronous=VM_ASYNC
-PE10.Locked=true
 PB13.Locked=true
-PE14.Locked=true
 RCC.USART3Freq_Value=48000000
 RCC.PLLSAIRCLKFreq_Value=96000000
 ProjectManager.ProjectBuild=false
@@ -52,13 +49,11 @@ PG1.GPIOParameters=GPIO_Label
 ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.16.0
 MxDb.Version=DB.6.0.10
 PF12.GPIO_Label=EN_VSWITCHED
-PE15.Locked=true
 ProjectManager.BackupPrevious=false
 ADC3.IPParameters=Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,NbrOfConversionFlag
 PF8.Mode=Full_Duplex_Master
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PF3.Signal=ADC3_IN9
-PE10.Signal=GPIO_Output
 ProjectManager.HalAssertFull=false
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
@@ -67,13 +62,10 @@ PC8.GPIOParameters=GPIO_PuPd
 RCC.SDMMCClockSelection=RCC_SDMMC1CLKSOURCE_CLK48
 PB9.Signal=I2C1_SDA
 Mcu.Package=LQFP144
-PA5.Locked=true
-PE10.GPIOParameters=GPIO_Label
 PD5.GPIOParameters=GPIO_PuPd,GPIO_Label
 Dma.SDMMC1_RX.0.PeriphBurst=DMA_PBURST_INC4
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 USART3.IPParameters=VirtualMode-Asynchronous
-PE12.GPIO_Label=EN_SOLAR
 PA5.GPIOParameters=GPIO_Label
 SPI5.CalculateBaudRate=6.0 MBits/s
 RCC.CECFreq_Value=32786.88524590164
@@ -83,7 +75,6 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Dma.SDMMC1_TX.1.MemInc=DMA_MINC_ENABLE
 PC12.GPIO_PuPd=GPIO_NOPULL
 Dma.SDMMC1_RX.0.Mode=DMA_PFCTRL
-PE10.GPIO_Label=EN_VBAT
 PD5.Locked=true
 PA4.GPIO_Label=AN_24V
 PD15.Signal=GPIO_Output
@@ -98,8 +89,7 @@ RCC.PLLQoutputFreq_Value=48000000
 ProjectManager.ProjectFileName=Base200Tester.ioc
 ADC1.Rank-0\#ChannelRegularConversion=1
 Dma.SDMMC1_RX.0.PeriphInc=DMA_PINC_DISABLE
-PA15.GPIOParameters=GPIO_Label
-Mcu.PinsNb=47
+Mcu.PinsNb=41
 PD2.GPIO_PuPd=GPIO_PULLUP
 SH.ADCx_IN6.0=ADC1_IN6,IN6
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
@@ -113,9 +103,7 @@ RCC.UART8Freq_Value=48000000
 PC0.Signal=GPIO_Output
 PC3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB8.GPIO_Label=SCL_DUT
-PA15.Locked=true
 RCC.USART6Freq_Value=48000000
-SH.ADCx_IN7.0=ADC1_IN7,IN7
 PC6.Mode=Asynchronous
 PC6.Locked=true
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
@@ -125,93 +113,85 @@ PB9.Locked=true
 NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PD7.Locked=true
 PD8.Mode=Asynchronous
-Mcu.Pin46=VP_TIM1_VS_ClockSourceINT
 PF3.GPIOParameters=GPIO_Label
-PA5.Signal=SharedAnalog_PA5
-Mcu.Pin40=PB4
-Mcu.Pin41=PB5
+PA5.Signal=ADCx_IN5
+Mcu.Pin40=VP_TIM1_VS_ClockSourceINT
 PE13.GPIOParameters=PinState,GPIO_Label
 PC12.Mode=SD_1_bit
-Mcu.Pin44=VP_FATFS_VS_SDIO
-Mcu.Pin45=VP_SYS_VS_Systick
-Mcu.Pin42=PB8
-Mcu.Pin43=PB9
 ProjectManager.LastFirmware=true
-PE14.Signal=GPIO_Output
-PE15.Signal=GPIO_Output
-Mcu.Pin37=PD6
 PB4.GPIO_Label=EN_VBAT
-Mcu.Pin38=PD7
+Mcu.Pin37=PB9
+Mcu.Pin38=VP_FATFS_VS_SDIO
 PB15.GPIO_Label=EN_BOOTS
-Mcu.Pin35=PD4
+Mcu.Pin35=PB5
 RCC.I2C1Freq_Value=48000000
-Mcu.Pin36=PD5
+Mcu.Pin36=PB8
 RCC.PLLI2SPCLKFreq_Value=96000000
-Mcu.Pin39=PB3
+Mcu.Pin39=VP_SYS_VS_Systick
 RCC.RNGFreq_Value=48000000
-Mcu.Pin30=PC7
+Mcu.Pin30=PD5
 Dma.SDMMC1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 RCC.EthernetFreq_Value=48000000
 PF12.Locked=true
-Mcu.Pin33=PC12
-Mcu.Pin34=PD2
-Mcu.Pin31=PC8
-Mcu.Pin32=PA15
+Mcu.Pin33=PB3
+Mcu.Pin34=PB4
+Mcu.Pin31=PD6
+Mcu.Pin32=PD7
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Dma.SDMMC1_TX.1.FIFOMode=DMA_FIFOMODE_ENABLE
 PF15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 ProjectManager.FreePins=false
 RCC.PLLI2SQCLKFreq_Value=96000000
-Mcu.Pin26=PD15
-Mcu.Pin27=PG2
-Mcu.Pin24=PD8
+Mcu.Pin26=PC8
+Mcu.Pin27=PC12
+Mcu.Pin24=PC6
 ProjectManager.UnderRoot=true
 PE13.Locked=true
-Mcu.Pin25=PD9
+Mcu.Pin25=PC7
+Mcu.Pin28=PD2
 PC7.GPIO_Label=RX
-Mcu.Pin28=PG3
+Mcu.Pin29=PD4
 PC8.Mode=SD_1_bit
-Mcu.Pin29=PC6
 PB4.Locked=true
 PC8.GPIO_PuPd=GPIO_PULLUP
 PA4.Signal=SharedAnalog_PA4
-Mcu.Pin22=PB13
+Mcu.Pin22=PG2
 PB5.Signal=GPIO_Output
-Mcu.Pin23=PB15
-Mcu.Pin20=PE15
+Mcu.Pin23=PG3
+Mcu.Pin20=PD9
 ADC1.master=1
 PA3.Locked=true
 PE13.GPIO_Label=LCD_RST
-Mcu.Pin21=PB12
-PA5.GPIO_Label=AN_Vbat
+Mcu.Pin21=PD15
+PA5.GPIO_Label=AN_VBAT
 NVIC.ForceEnableDMAVector=true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.CompilerOptimize=6
 Dma.SDMMC1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 PD15.Locked=true
 ProjectManager.HeapSize=0x4000
-Mcu.Pin15=PG1
+Mcu.Pin15=PE13
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PE10
-Mcu.Pin13=PF14
-Mcu.Pin14=PF15
-Mcu.Pin19=PE14
+Mcu.Pin16=PB12
+Mcu.Pin13=PF15
+Mcu.Pin14=PG1
+Mcu.Pin19=PD8
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PE12
+Mcu.Pin17=PB13
 PF9.Signal=SPI5_MOSI
-Mcu.Pin18=PE13
+Mcu.Pin18=PB15
+SH.ADCx_IN5.0=ADC1_IN5,IN5
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PA7
-Mcu.Pin12=PF12
+Mcu.Pin11=PF12
+Mcu.Pin12=PF14
 PB8.Mode=I2C
 Mcu.Pin10=PA6
 PC3.GPIO_Label=MINUS
-PE12.GPIOParameters=GPIO_Label
+SH.ADCx_IN5.ConfNb=1
 PG3.GPIO_Label=DOWN
 PD2.Signal=SDMMC1_CMD
 RCC.I2C2Freq_Value=48000000
 SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
-PA7.GPIOParameters=GPIO_Label
 PC0.Locked=true
 PB12.GPIOParameters=GPIO_Label
 PD7.GPIOParameters=GPIO_Label
@@ -221,8 +201,8 @@ RCC.SAI1Freq_Value=96000000
 RCC.CortexFreq_Value=48000000
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F746ZGTx
-PG2.Signal=GPIO_Input
 ADC3.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_9
+PG2.Signal=GPIO_Input
 SH.SharedAnalog_PA4.0=GPIO_Analog
 SH.SharedAnalog_PA4.1=ADC1_IN4,IN4
 PG2.Locked=true
@@ -251,7 +231,6 @@ RCC.FCLKCortexFreq_Value=48000000
 I2C1.IPParameters=Timing
 Mcu.IP2=CORTEX_M7
 Mcu.IP3=DMA
-PA15.GPIO_Label=EN_3V3
 PB4.GPIOParameters=GPIO_Label
 Mcu.IP0=ADC1
 Mcu.IP1=ADC3
@@ -266,9 +245,7 @@ Mcu.IPNb=14
 RCC.PLLI2SRoutputFreq_Value=96000000
 ProjectManager.PreviousToolchain=
 RCC.SPDIFRXFreq_Value=96000000
-SH.SharedAnalog_PA5.ConfNb=2
 PF12.Signal=GPIO_Output
-SH.ADCx_IN7.ConfNb=1
 Mcu.Pin6=PC3
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
@@ -308,19 +285,15 @@ PD5.GPIO_Label=PLUS
 ProjectManager.ToolChainLocation=
 RCC.LSI_VALUE=32000
 PF5.GPIO_Label=AN_3V3
-PA15.Signal=GPIO_Output
 PF8.Signal=SPI5_MISO
 PF5.Signal=ADC3_IN15
-SH.SharedAnalog_PA5.1=ADC1_IN5,IN5
 PB5.GPIO_Label=EN_VSOLAR
-SH.SharedAnalog_PA5.0=GPIO_Analog
 Dma.Request1=SDMMC1_TX
 PD6.Signal=GPIO_Input
 Dma.Request0=SDMMC1_RX
 PF3.GPIO_Label=AN_1V8
 Dma.SDMMC1_RX.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 PF15.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-PE12.Locked=true
 PB15.Locked=true
 PB3.Locked=true
 PB4.Signal=GPIO_Output
@@ -333,7 +306,6 @@ PB8.GPIOParameters=GPIO_Label
 PD15.GPIO_Label=EN_3V3
 RCC.UART7Freq_Value=48000000
 PF3.Mode=IN9
-PE14.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=SDA_DUT
 ProjectManager.NoMain=false
 PG3.Signal=GPIO_Input
@@ -342,7 +314,6 @@ PG1.Signal=GPIO_Output
 PG1.Locked=true
 PC8.Signal=SDMMC1_D0
 ProjectManager.DefaultFWLocation=true
-PE14.GPIO_Label=EN_VSWITCHED
 PD9.Signal=USART3_RX
 PD5.Signal=GPIO_Input
 PB12.Locked=true
@@ -351,14 +322,12 @@ RCC.LCDTFToutputFreq_Value=48000000
 SPI5.Mode=SPI_MODE_MASTER
 PF5.Mode=IN15
 RCC.FamilyName=M
-PE15.GPIOParameters=GPIO_Label
 PB9.GPIOParameters=GPIO_Label
 PC12.GPIOParameters=GPIO_PuPd
 FATFS.IPParameters=USE_DMA_CODE_SD
 PF7.Mode=Full_Duplex_Master
 PD4.GPIO_PuPd=GPIO_PULLUP
 Dma.SDMMC1_TX.1.PeriphBurst=DMA_PBURST_INC4
-PE15.GPIO_Label=EN_VIN
 ProjectManager.TargetToolchain=STM32CubeIDE
 PF15.Locked=true
 PB9.Mode=I2C
@@ -394,7 +363,6 @@ PB15.GPIOParameters=GPIO_Label
 RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLP,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F746ZGTx
-PE12.Signal=GPIO_Output
 Mcu.IP8=SDMMC1
 Mcu.IP9=SPI5
 Mcu.IP6=NVIC
@@ -402,7 +370,6 @@ Mcu.IP7=RCC
 ProjectManager.CoupleFile=true
 PB3.Signal=GPIO_Output
 RCC.SYSCLKFreq_VALUE=48000000
-PA7.GPIO_Label=AN_RF
 Dma.SDMMC1_TX.1.MemBurst=DMA_MBURST_INC4
 KeepUserPlacement=false
 Dma.SDMMC1_RX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
@@ -428,5 +395,3 @@ PC3.GPIO_PuPd=GPIO_PULLUP
 SPI5.Direction=SPI_DIRECTION_2LINES
 PA3.GPIO_Label=RED
 PD6.GPIO_PuPd=GPIO_PULLUP
-PA7.Signal=ADCx_IN7
-isbadioc=false
