--- a/Base200Tester.ioc
+++ b/Base200Tester.ioc
@@ -11,6 +11,7 @@ PC12.Signal=SDMMC1_CK
 RCC.PLLQCLKFreq_Value=48000000
 PG3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC7.Locked=true
+SPI5.DataSize=SPI_DATASIZE_8BIT
 PD8.Locked=true
 PC6.GPIO_Label=TX
 PC3.Locked=true
@@ -45,15 +46,13 @@ ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA4.Locked=true
 PB12.GPIO_Label=PULL_WP
-PG1.GPIOParameters=GPIO_Label
+PG1.GPIOParameters=PinState,GPIO_Label
 ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.16.0
 MxDb.Version=DB.6.0.10
 PF12.GPIO_Label=EN_VSWITCHED
 ProjectManager.BackupPrevious=false
-ADC3.IPParameters=Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,NbrOfConversionFlag
 PF8.Mode=Full_Duplex_Master
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PF3.Signal=ADC3_IN9
 ProjectManager.HalAssertFull=false
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
@@ -67,11 +66,12 @@ Dma.SDMMC1_RX.0.PeriphBurst=DMA_PBURST_INC4
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 USART3.IPParameters=VirtualMode-Asynchronous
 PA5.GPIOParameters=GPIO_Label
-SPI5.CalculateBaudRate=6.0 MBits/s
+SPI5.CalculateBaudRate=375.0 KBits/s
 RCC.CECFreq_Value=32786.88524590164
 PF14.Signal=GPIO_Output
 RCC.APB1TimFreq_Value=48000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PG1.PinState=GPIO_PIN_SET
 Dma.SDMMC1_TX.1.MemInc=DMA_MINC_ENABLE
 PC12.GPIO_PuPd=GPIO_NOPULL
 Dma.SDMMC1_RX.0.Mode=DMA_PFCTRL
@@ -89,7 +89,8 @@ RCC.PLLQoutputFreq_Value=48000000
 ProjectManager.ProjectFileName=Base200Tester.ioc
 ADC1.Rank-0\#ChannelRegularConversion=1
 Dma.SDMMC1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Mcu.PinsNb=41
+PA15.GPIOParameters=GPIO_Label
+Mcu.PinsNb=40
 PD2.GPIO_PuPd=GPIO_PULLUP
 SH.ADCx_IN6.0=ADC1_IN6,IN6
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
@@ -103,6 +104,7 @@ RCC.UART8Freq_Value=48000000
 PC0.Signal=GPIO_Output
 PC3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB8.GPIO_Label=SCL_DUT
+PA15.Locked=true
 RCC.USART6Freq_Value=48000000
 PC6.Mode=Asynchronous
 PC6.Locked=true
@@ -113,56 +115,54 @@ PB9.Locked=true
 NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PD7.Locked=true
 PD8.Mode=Asynchronous
-PF3.GPIOParameters=GPIO_Label
 PA5.Signal=ADCx_IN5
-Mcu.Pin40=VP_TIM1_VS_ClockSourceINT
 PE13.GPIOParameters=PinState,GPIO_Label
 PC12.Mode=SD_1_bit
 ProjectManager.LastFirmware=true
 PB4.GPIO_Label=EN_VBAT
-Mcu.Pin37=PB9
-Mcu.Pin38=VP_FATFS_VS_SDIO
+Mcu.Pin37=VP_FATFS_VS_SDIO
+Mcu.Pin38=VP_SYS_VS_Systick
 PB15.GPIO_Label=EN_BOOTS
-Mcu.Pin35=PB5
+Mcu.Pin35=PB8
 RCC.I2C1Freq_Value=48000000
-Mcu.Pin36=PB8
+Mcu.Pin36=PB9
 RCC.PLLI2SPCLKFreq_Value=96000000
-Mcu.Pin39=VP_SYS_VS_Systick
+Mcu.Pin39=VP_TIM1_VS_ClockSourceINT
 RCC.RNGFreq_Value=48000000
-Mcu.Pin30=PD5
+Mcu.Pin30=PD6
 Dma.SDMMC1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 RCC.EthernetFreq_Value=48000000
 PF12.Locked=true
-Mcu.Pin33=PB3
-Mcu.Pin34=PB4
-Mcu.Pin31=PD6
-Mcu.Pin32=PD7
+Mcu.Pin33=PB4
+Mcu.Pin34=PB5
+Mcu.Pin31=PD7
+Mcu.Pin32=PB3
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Dma.SDMMC1_TX.1.FIFOMode=DMA_FIFOMODE_ENABLE
 PF15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 ProjectManager.FreePins=false
 RCC.PLLI2SQCLKFreq_Value=96000000
-Mcu.Pin26=PC8
-Mcu.Pin27=PC12
-Mcu.Pin24=PC6
+Mcu.Pin26=PC12
+Mcu.Pin27=PD2
+Mcu.Pin24=PC8
 ProjectManager.UnderRoot=true
 PE13.Locked=true
-Mcu.Pin25=PC7
-Mcu.Pin28=PD2
+Mcu.Pin25=PA15
+Mcu.Pin28=PD4
 PC7.GPIO_Label=RX
-Mcu.Pin29=PD4
+Mcu.Pin29=PD5
 PC8.Mode=SD_1_bit
 PB4.Locked=true
 PC8.GPIO_PuPd=GPIO_PULLUP
 PA4.Signal=SharedAnalog_PA4
-Mcu.Pin22=PG2
+Mcu.Pin22=PC6
 PB5.Signal=GPIO_Output
-Mcu.Pin23=PG3
-Mcu.Pin20=PD9
+Mcu.Pin23=PC7
+Mcu.Pin20=PG2
 ADC1.master=1
 PA3.Locked=true
 PE13.GPIO_Label=LCD_RST
-Mcu.Pin21=PD15
+Mcu.Pin21=PG3
 PA5.GPIO_Label=AN_VBAT
 NVIC.ForceEnableDMAVector=true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -170,28 +170,28 @@ ProjectManager.CompilerOptimize=6
 Dma.SDMMC1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 PD15.Locked=true
 ProjectManager.HeapSize=0x4000
-Mcu.Pin15=PE13
+Mcu.Pin15=PB13
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PB12
-Mcu.Pin13=PF15
-Mcu.Pin14=PG1
-Mcu.Pin19=PD8
+Mcu.Pin16=PB15
+Mcu.Pin13=PE13
+Mcu.Pin14=PB12
+Mcu.Pin19=PD15
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PB13
+Mcu.Pin17=PD8
 PF9.Signal=SPI5_MOSI
-Mcu.Pin18=PB15
+Mcu.Pin18=PD9
 SH.ADCx_IN5.0=ADC1_IN5,IN5
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PF12
-Mcu.Pin12=PF14
+Mcu.Pin11=PF15
+Mcu.Pin12=PG1
 PB8.Mode=I2C
-Mcu.Pin10=PA6
+Mcu.Pin10=PF14
 PC3.GPIO_Label=MINUS
 SH.ADCx_IN5.ConfNb=1
 PG3.GPIO_Label=DOWN
 PD2.Signal=SDMMC1_CMD
 RCC.I2C2Freq_Value=48000000
-SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize,CLKPolarity
 PC0.Locked=true
 PB12.GPIOParameters=GPIO_Label
 PD7.GPIOParameters=GPIO_Label
@@ -201,13 +201,11 @@ RCC.SAI1Freq_Value=96000000
 RCC.CortexFreq_Value=48000000
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F746ZGTx
-ADC3.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_9
 PG2.Signal=GPIO_Input
 SH.SharedAnalog_PA4.0=GPIO_Analog
 SH.SharedAnalog_PA4.1=ADC1_IN4,IN4
 PG2.Locked=true
-ADC3.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-LL-false,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_SPI5_Init-SPI5-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_ADC3_Init-ADC3-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_USART6_UART_Init-USART6-false-HAL-true,12-MX_USART3_UART_Init-USART3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-LL-false,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_SPI5_Init-SPI5-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_USART6_UART_Init-USART6-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=GREEN
 PD6.Locked=true
@@ -225,50 +223,50 @@ PG3.GPIO_PuPd=GPIO_PULLUP
 PB5.GPIOParameters=GPIO_Label
 RCC.I2C3Freq_Value=48000000
 Dma.SDMMC1_TX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Mcu.IP4=FATFS
-Mcu.IP5=I2C1
+Mcu.IP4=I2C1
+Mcu.IP5=NVIC
 RCC.FCLKCortexFreq_Value=48000000
 I2C1.IPParameters=Timing
-Mcu.IP2=CORTEX_M7
-Mcu.IP3=DMA
+Mcu.IP2=DMA
+Mcu.IP3=FATFS
+PA15.GPIO_Label=CONNECT
 PB4.GPIOParameters=GPIO_Label
 Mcu.IP0=ADC1
-Mcu.IP1=ADC3
+Mcu.IP1=CORTEX_M7
 TIM1.Prescaler=48-1
 Mcu.UserConstants=
 PF9.Locked=true
 RCC.SDMMCFreq_Value=48000000
-PF5.Locked=true
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=48000000
-Mcu.IPNb=14
+Mcu.IPNb=13
 RCC.PLLI2SRoutputFreq_Value=96000000
 ProjectManager.PreviousToolchain=
 RCC.SPDIFRXFreq_Value=96000000
 PF12.Signal=GPIO_Output
-Mcu.Pin6=PC3
-Mcu.Pin7=PA3
-Mcu.Pin8=PA4
-Mcu.Pin9=PA5
+Mcu.Pin6=PA4
+SPI5.CLKPolarity=SPI_POLARITY_LOW
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PF12
 RCC.VCOSAIOutputFreq_Value=192000000
 RCC.AHBFreq_Value=48000000
-Mcu.Pin0=PF3
-Mcu.Pin1=PF5
+Mcu.Pin0=PF7
+Mcu.Pin1=PF8
 GPIO.groupedBy=Group By Peripherals
-Mcu.Pin2=PF7
-Mcu.Pin3=PF8
-Mcu.Pin4=PF9
-Mcu.Pin5=PC0
+Mcu.Pin2=PF9
+Mcu.Pin3=PC0
+Mcu.Pin4=PC3
+Mcu.Pin5=PA3
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_6
 RCC.HSE_VALUE=25000000
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP10=SYS
+Mcu.IP10=TIM1
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-Mcu.IP12=USART3
+Mcu.IP12=USART6
 PE13.PinState=GPIO_PIN_SET
-Mcu.IP11=TIM1
+Mcu.IP11=USART3
 PF9.Mode=Full_Duplex_Master
-Mcu.IP13=USART6
 PE13.Signal=GPIO_Output
 RCC.VCOInputFreq_Value=1000000
 File.Version=6
@@ -279,19 +277,17 @@ SH.ADCx_IN6.ConfNb=1
 Dma.RequestsNb=2
 ProjectManager.ProjectName=Base200Tester
 PD7.GPIO_Label=LEFT
-SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
 PA6.Signal=ADCx_IN6
 PD5.GPIO_Label=PLUS
 ProjectManager.ToolChainLocation=
 RCC.LSI_VALUE=32000
-PF5.GPIO_Label=AN_3V3
+PA15.Signal=GPIO_Output
 PF8.Signal=SPI5_MISO
-PF5.Signal=ADC3_IN15
 PB5.GPIO_Label=EN_VSOLAR
 Dma.Request1=SDMMC1_TX
 PD6.Signal=GPIO_Input
 Dma.Request0=SDMMC1_RX
-PF3.GPIO_Label=AN_1V8
 Dma.SDMMC1_RX.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 PF15.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
 PB15.Locked=true
@@ -305,7 +301,6 @@ RCC.I2SFreq_Value=96000000
 PB8.GPIOParameters=GPIO_Label
 PD15.GPIO_Label=EN_3V3
 RCC.UART7Freq_Value=48000000
-PF3.Mode=IN9
 PB9.GPIO_Label=SDA_DUT
 ProjectManager.NoMain=false
 PG3.Signal=GPIO_Input
@@ -320,7 +315,6 @@ PB12.Locked=true
 ProjectManager.DeletePrevious=true
 RCC.LCDTFToutputFreq_Value=48000000
 SPI5.Mode=SPI_MODE_MASTER
-PF5.Mode=IN15
 RCC.FamilyName=M
 PB9.GPIOParameters=GPIO_Label
 PC12.GPIOParameters=GPIO_PuPd
@@ -333,7 +327,6 @@ PF15.Locked=true
 PB9.Mode=I2C
 ProjectManager.RegisterCallBack=
 RCC.USBFreq_Value=48000000
-PF5.GPIOParameters=GPIO_Label
 NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 RCC.PLLSAIoutputFreq_Value=96000000
 RCC.LSE_VALUE=32768
@@ -363,10 +356,10 @@ PB15.GPIOParameters=GPIO_Label
 RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLP,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F746ZGTx
-Mcu.IP8=SDMMC1
-Mcu.IP9=SPI5
-Mcu.IP6=NVIC
-Mcu.IP7=RCC
+Mcu.IP8=SPI5
+Mcu.IP9=SYS
+Mcu.IP6=RCC
+Mcu.IP7=SDMMC1
 ProjectManager.CoupleFile=true
 PB3.Signal=GPIO_Output
 RCC.SYSCLKFreq_VALUE=48000000
@@ -380,12 +373,10 @@ RCC.HSI_VALUE=16000000
 RCC.PLLP=RCC_PLLP_DIV4
 RCC.PLLQ=4
 ADC1.NbrOfConversionFlag=1
-ADC3.Rank-11\#ChannelRegularConversion=1
 PB8.Signal=I2C1_SCL
 PC7.Mode=Asynchronous
 PD9.Locked=true
 RCC.APB1Freq_Value=48000000
-ADC3.NbrOfConversionFlag=1
 Dma.SDMMC1_TX.1.Mode=DMA_PFCTRL
 Dma.SDMMC1_TX.1.PeriphInc=DMA_PINC_DISABLE
 ProjectManager.DeviceId=STM32F746ZGTx
@@ -395,3 +386,4 @@ PC3.GPIO_PuPd=GPIO_PULLUP
 SPI5.Direction=SPI_DIRECTION_2LINES
 PA3.GPIO_Label=RED
 PD6.GPIO_PuPd=GPIO_PULLUP
+isbadioc=false
